Added description to pages

--- a/templates/app/privacy-policy.html
+++ b/templates/app/privacy-policy.html
@@ -4,6 +4,10 @@
     Политика конфиденциальности
 {% endblock %}
 
+{% block description %}
+    Политика конфиденциальности персональных данных пользователей web-приложения FooDate.
+{% endblock %}
+
 {% block content %}
     <div class="container border border-apple p-5 pt-3" style="text-align: justify">
 
