--- a/templates/app_mobile/app.html
+++ b/templates/app_mobile/app.html
@@ -5,6 +5,10 @@
     Холодильник
 {% endblock %}
 
+{% block description %}
+    Холодильник от FooDate даёт Вам возможность отслеживать сроки годности Ваших продуктов.
+{% endblock %}
+
 {% block content %}
     <link rel="stylesheet" href="{% static 'css/app/app.css' %}">
     <div style="position: sticky; top: 0; height: 45px; max-height: 45px; background-color: white;
