--- a/templates/app_mobile/homepage.html
+++ b/templates/app_mobile/homepage.html
@@ -5,6 +5,12 @@
     Главная
 {% endblock %}
 
+{% block description %}
+    FooDate - это не просто web-приложение, позволяющее Вам контролировать любые процессы,
+    связанные с продуктами питания. Это возможность экономить и эффективнее использовать Ваше
+    время на приготовление пищи.
+{% endblock %}
+
 {% block content %}
     <link rel="stylesheet" href="{% static 'css/app/homepage.css' %}">
     <div class="d-flex flex-column justify-content-between"
