--- a/templates/app_mobile/privacy-policy.html
+++ b/templates/app_mobile/privacy-policy.html
@@ -5,6 +5,10 @@
     Политика конфиденциальности
 {% endblock %}
 
+{% block description %}
+    Политика конфиденциальности персональных данных пользователей web-приложения FooDate.
+{% endblock %}
+
 {% block content %}
     <style>
         p {
