--- a/templates/book/mobile/products.html
+++ b/templates/book/mobile/products.html
@@ -5,6 +5,11 @@
     Книга продуктов
 {% endblock %}
 
+{% block description %}
+    Книга продуктов содержит в себе список продуктов. Подробную информацию о каждом из них Вы
+    можете получить, нажав на карточку продукта.
+{% endblock %}
+
 {% load static %}
 {% load uploads %}
 {% block content %}
