--- a/templates/book/mobile/recipes.html
+++ b/templates/book/mobile/recipes.html
@@ -5,6 +5,11 @@
     Книга рецептов
 {% endblock %}
 
+{% block description %}
+    Книга рецептов содержит в себе список рецептов. Подробную информацию о каждом из них Вы
+    можете получить, нажав на карточку рецепта.
+{% endblock %}
+
 {% load static %}
 {% load uploads %}
 {% block content %}
