--- a/templates/app/app.html
+++ b/templates/app/app.html
@@ -5,6 +5,10 @@
     Холодильник
 {% endblock %}
 
+{% block description %}
+    Холодильник от FooDate даёт Вам возможность отслеживать сроки годности Ваших продуктов.
+{% endblock %}
+
 {% block content %}
     <link rel="stylesheet" href="{% static 'css/app/app.css' %}">
     <div class="container">
