--- a/templates/book/products.html
+++ b/templates/book/products.html
@@ -4,6 +4,11 @@
     Книга продуктов
 {% endblock %}
 
+{% block description %}
+    Книга продуктов содержит в себе список продуктов. Подробную информацию о каждом из них Вы
+    можете получить, нажав на карточку продукта.
+{% endblock %}
+
 {% load static %}
 {% load uploads %}
 {% load range_ %}
