--- a/templates/error_pages/400.html
+++ b/templates/error_pages/400.html
@@ -7,7 +7,9 @@
 {% endblock %}
 
 {% block content %}
-    <div class="d-flex justify-content-center">
+    <div class="d-flex flex-column justify-content-center text-center mt-5">
+        <h4 class="text-apple">Неверный запрос</h4>
+        <p class="text-secondary small">Ошибка 400</p>
         <img src="{% static 'images/error_pages/bad-request.png' %}"
              class="mx-auto my-auto mt-5
             {% if request|is_pc %}
