--- a/templates/error_pages/500.html
+++ b/templates/error_pages/500.html
@@ -3,11 +3,13 @@
 {% load static %}
 
 {% block title %}
-    Страница не найдена
+    Внутренняя ошибка сервера
 {% endblock %}
 
 {% block content %}
-    <div class="d-flex justify-content-center">
+    <div class="d-flex flex-column justify-content-center text-center mt-5">
+        <h4 class="text-apple">Внутренняя ошибка сервера</h4>
+        <p class="text-secondary small">Ошибка 500</p>
         <img src="{% static 'images/error_pages/internal-server-error.png' %}"
              class="mx-auto my-auto mt-5
             {% if request|is_pc %}
