Update in user email policy

--- a/static/css/users/login.css
+++ b/static/css/users/login.css
@@ -1,3 +1,12 @@
 .form-control {
     border: none;
 }
+
+.social-icon {
+    width: 50px;
+}
+
+.icon:hover {
+    transition: .5s;
+    transform: scale(1.2);
+}
