--- a/templates/include/social_auth_icons.html
+++ b/templates/include/social_auth_icons.html
@@ -2,7 +2,7 @@
 <div class="row mt-4">
     <a href="{% url 'social:begin' 'vk-oauth2' %}">
         <img src="{% static 'images/icons/vk.png' %}"
-             class="icon"
+             class="social-icon"
              data-toggle="tooltip"
              title="Войти через ВКонтакте"
              alt="VK">
