--- a/templates/users/mobile/profile.html
+++ b/templates/users/mobile/profile.html
@@ -56,6 +56,9 @@
                 {% for error in form.errors.values %}
                     {{ error }}
                 {% endfor %}
+                {% for error in errors %}
+                    {{ error }}
+                {% endfor %}
             </div>
             <div class="mb-3">
                 <input class="btn btn-outline-apple mx-auto mt-5" type="submit"
